[package]
name = "ringlink-core"
description = "implemention of RingLink network core function"
authors = ["boot <boot@ring.link>"]
version = "0.1.0"
edition = "2021"

[dependencies]
ringlink-identity = { git = "https://github.com/RingLinkPlatform/identity" }
ringlink-protocol = { git = "https://github.com/RingLinkPlatform/protocol" }
ringlink-transport = { git = "https://github.com/RingLinkPlatform/transport" }
ringlink-p2p = { git = "https://github.com/RingLinkPlatform/p2p" }

arc-swap = "1.7.1"
bytes = "1.9"
openssl = "0.10.68"
parking_lot = "0.12.3"
thiserror = "2.0.6"
tokio = { version = "1.42", features = ["rt", "sync", "macros"] }
tracing = "0.1.41"
async-trait = "0.1.83"
tokio-stream = { version = "0.1", features = ["sync"] }
papaya = "0.1.6"

[dev-dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
toml = "0.8.19"
clap = { version = "4.5.23", features = ["derive"] }
tracing-subscriber = "0.3.19"
anyhow = "1.0.94"
base64 = "0.22.1"
libc = "0.2.169"
flume = "0.11.1"
cfg-if = "1.0.0"

[[example]]
name = "tunnel"
path = "examples/tunnel/tunnel.rs"
